tests/fixtures/invalid/invalid_default_enum.avsc
{
  "type": "record",
  "name": "BadEnumDefault",
  "fields": [
    {
      "name": "color",
      "type": {
        "type": "enum",
        "name": "Color",
        "symbols": ["RED", "GREEN", "BLUE"]
      },
      "default": "YELLOW"
    }
  ]
}
